# cavela-llm-test

./: README.md  pyproject.toml  setup.sh
api/: admin.py  forms.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_uploadedfile.py  0003_uploadedfile_questions.py  0004_remove_uploadedfile_questions_uploadedfile_type.py  0005_quotation_task_quotation.py
api/templates/: file_list.html  home.html  upload_file.html
core/: settings.py  urls.py
