[project]
name = "djangoapp"
version = "0.1.0"
description = "A barebones Django application"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
